--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -9,7 +9,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 200vh;
+    overflow-y: scroll;
 }
 
 .MainPageFadeIn {
@@ -70,4 +71,56 @@ body {
 
 .ContactButton a:visited:hover {
     color: rgb(82, 245, 123);;
+}
+
+@media only screen and (max-width: 1024px) {
+    body {
+        background-color: rgb(13, 2, 8);
+        color: rgb(22, 194, 65);
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .MainPage {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 200vh;
+        width: 50vh;
+    }
+
+    .Welcome {
+        font-size: 50px;
+        font-weight: bold;
+        width: 40vh;
+    }   
+    
+    .MainText {
+        font-size: 18px;
+        font-weight:bold;
+        width: 40vh;
+        margin-bottom: 80px;
+    }
+
+    .AboutMe {
+        margin-top: 80px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .AboutMeLabel {
+        font-size: 33px;
+        font-weight: bold;
+        width: 40vh;
+    }   
+    
+    .AboutMeText {
+        font-size: 18px;
+        font-weight: bold;
+        width: 40vh;
+        margin-top: 10px;
+    }
+    
 }
