--- a/src/views/App.css
+++ b/src/views/App.css
@@ -1,6 +1,7 @@
 body {
   background-color: rgb(13, 2, 8);
   color: rgb(22, 194, 65);
+  margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
 
