--- a/src/views/App.css
+++ b/src/views/App.css
@@ -1,37 +1,26 @@
 body {
-  background-color: rgb(225, 245, 255);
+  background-color: rgb(225, 234, 238);
   color: rgb(56, 56, 67);
   margin: 0;
   font-family: 'Inter', sans-serif;
 }
 
-.MainPage {
+.ContentLayer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 200vh;
+  height: 100vh;
+  width: 100vw;
   overflow-y: scroll;
-}
+} 
 
-.MainPageFadeIn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.Welcome {
-  font-size: 100px;
-  font-weight: bold;
-  width: 80vh;
-}
-
-.MainText {
-  font-size: 25px;
-  font-weight: bold;
-  width: 80vh;
-  margin-bottom: 80px;
-}
+.BottomLayer {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  z-index: -1;
+} 
 
 .AboutMe {
   margin-top: 80px;
@@ -51,7 +40,7 @@ body {
 }
 
 .ContactButton a {
-  background-color: rgb(155,161,179);
+  background-color: rgb(185, 188, 196);
   border-style: none;
   font-size: 30px;
   padding: 5px;
