adds checkered background

--- a/src/components/MenuItem/MenuItem.css
+++ b/src/components/MenuItem/MenuItem.css
@@ -11,6 +11,7 @@
     padding-left: 10px;
     padding-right: 10px;
     width: 100px;
+    box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.5);
 }
 
 .MenuItem:hover {
