--- a/src/components/MenuItem/MenuItem.css
+++ b/src/components/MenuItem/MenuItem.css
@@ -1,40 +1,29 @@
 .MenuItemContainer {
+    align-items: center;
     background-color: rgb(198, 200, 206);
     border: none;
+    box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.25);
     color: rgb(56, 56, 67);
+    display: flex;
+    justify-content: flex-start;
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
-    margin-left: 10px;
+    height: 18px;
+    margin-left: 5px;
     margin-right: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 10px;
+    padding-left: 5px;
     padding-right: 10px;
-    width: 100px;
-    box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.25);
-}
-
-.MenuItemContainer {
-    background-color: rgb(198, 200, 206);
-    border: none;
-    color: rgb(56, 56, 67);
-    font-family: 'Roboto', sans-serif;
-    font-size: 15px;
-    margin-left: 10px;
-    margin-right: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 100px;
-    box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.25);
+    width: 150px;
 }
 
 .MenuItemSquare {
-    background-color: rgb(61, 61, 62);
+    background-color: rgb(69, 68, 62);
     border: none;
-    height: 10px;
-    width: 10px;
+    margin-right: 10px;
+    height: 20px;
+    width: 20px;
 }
 
 .MenuItem:hover {
